Add 6th floor image

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 
       <div class="map-wrapper" id="mapWrapper">
         <div class="campus-map" id="campusMap">
-          <img src="admin/public/assets/floors/floor5.png" alt="Campus map" class="map-img" draggable="false" />
+          <img src="admin/public/assets/floors/floor5.png" alt="Campus map" class="map-img" id="floor-image"
+            draggable="false" />
           <canvas width="838px" height="458px" id="map-line-canvas"></canvas>
           <canvas width="838px" height="458px" id="map-text-canvas"></canvas>
         </div>
