--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     </div>
   </footer>
 
-  <script src="client/js/script.js" defer></script>
+  <script src="client/js/mapFunctions.js" defer></script>
   <script src="client/js/announcements.js" defer></script>
   <script src="client/js/mobileNavigation.js" defer></script>
   <script src="client/js/mapButtons.js" defer></script>
